crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__native_finish_execution.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "ToolCall": {
          "call_id": "provider-id",
          "tool_name": "execute_code",
          "input_json": "{\"code\":\"finish(1);\"}",
          "replay": {
            "item_id": "opaque-item",
            "opaque": "signature"
          }
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "ToolResult": {
          "call_id": "provider-id",
          "content": [
            {
              "type": "text",
              "text": "(no printed output)"
            }
          ],
          "tool_name": "execute_code"
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===\n\n\n=== BOUND VARIABLES ===\n\n- `history`: `HistoryItem[]`, read-only, 1 entry\n\nSchema:\ntype HistoryItem =\n  | { kind: \"message\"; id: string; role: \"user\" | \"system\" | \"assistant\" | \"event\"; content: string; attachments?: Array<HistoryAttachment> }\n  | { kind: \"lashlang_step\"; id: string; protocol_iteration: number; code: string; output: Array<unknown>; images?: Array<HistoryImage>; error?: string | null; final_output?: unknown }\ntype HistoryAttachment = { id: string; media_type?: string | null; label?: string | null; source: string; reference: string }\ntype HistoryImage = { id: string; media_type: string; width?: number | null; height?: number | null; bytes: number; label?: string | null }\n\n\n=== FINALIZATION ===\n\nFinish-required: prose alone never ends this turn. Every response, including the last, acts inside the `code` argument of an `execute_code` call. Do not call `finish(value)` until the answer is in hand; the final response's `execute_code` call runs `finish(value)` (`finish(null)` only when null is the answer). Never announce an action without the `execute_code` call that performs it.",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
