crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__native_output_limit_prose.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "Text": {
          "text": "partial answer",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  },
  {
    "role": "System",
    "blocks": [
      {
        "Text": {
          "text": "Your answer was cut off by the output limit — retry with a shorter answer. Do less per program and continue in a later step.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===\n\n\n=== BOUND VARIABLES ===\n\n- `history`: `HistoryItem[]`, read-only, 2 entries\n\n\n=== FINALIZATION ===\n\nNatural termination: prose alone ends this turn as the final answer, so write prose only when no work remains; otherwise perform the next step in an `execute_code` call. Prefer prose for the final answer. Call `finish(value)` inside the program only when the answer is a value the program built for this request, never to hand back a tool's raw result.",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
